Fix TOC header alignment again

--- a/docusaurus/src/components/CollapsibleTOC/CollapsibleTOC.module.scss
+++ b/docusaurus/src/components/CollapsibleTOC/CollapsibleTOC.module.scss
@@ -42,6 +42,7 @@
 .collapsed .header {
   padding-bottom: 0;
   min-height: auto;
+  padding-top: 4px;
 }
 
 .label {
